# pyjsg

./: README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yaml  pypi-publish.yaml
pyjsg/: validate_json.py
pyjsg/jsglib/: conformance.py  jsg_anytype.py  jsg_array.py  jsg_context.py  jsg_null.py  jsg_object.py  jsg_objectmap.py  jsg_strings.py  jsg_validateable.py  loader.py  logger.py  typing_patch_37.py
pyjsg/parser/: jsgLexer.py  jsgParser.py  jsgParserLexer.py  jsgParserParser.py
pyjsg/parser_impl/: anonymousidentifierfactory.py  generate_python.py  jsg_arrayexpr_parser.py  jsg_builtinvaluetype_parser.py  jsg_doc_context.py  jsg_doc_parser.py  jsg_ebnf_parser.py  jsg_lexerruleblock_parser.py  jsg_objectexpr_parser.py  jsg_pairdef_parser.py  jsg_valuetype_parser.py  parser_utils.py
tests/: conftest.py
tests/test_basics/: parser.py  test_anonid.py  test_generate_python.py  test_jsg_files.py  test_objectmacro.py  test_shexj.py  test_xsfacet.py
tests/test_basics/py/: NodeConstraint.py  OneOf.py  ShExJ.py  StemRange.py  emptyobject.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  facet.py  goodjsg.py  labeledShapeExpr.py  labeledShapeExpr1.py  labeledShapeExpr2.py  labeledShapeOr.py  list_options.py  listcardinalities.py  shapes.py
tests/test_issues/: test_builtins_issue.py  test_extra.py  test_gene_seq.py  test_ignore_issue.py  test_isinstance_issue.py  test_issue14.py  test_issues.py  test_member_example.py  test_missing_item.py  test_multi_type_omissions.py  test_namespace_issue.py  test_nested_objects.py  test_objectliteral.py  test_parse_error.py
tests/test_jsglib/: test_builtins.py  test_jsgpattern.py  test_jsgstring.py  test_object.py  test_objectmap.py
tests/test_jsglib/py/: ShExJ.py
tests/test_parser_impl/: test_arrayexpr_parser.py  test_builtinvaluetype_parser.py  test_ebnf_parser.py  test_lexerruleblock_parser.py  test_objectexpr_parser.py  test_pairdef_parser.py  test_parser_utils.py  test_valuetype_parser.py
tests/test_python_generator/: test_any_type.py  test_builtins.py  test_builtins_1.py  test_cardinality.py  test_lists.py  test_macro_constructors.py  test_null_proposal.py  test_object_map.py
tests/test_python_generator/py/: any_type.py  any_type_2.py  any_type_3.py  builtins_cooked.py  builtins_raw.py  builtins_semiraw.py  cardinality_1.py  cardinality_2.py  cardinality_3.py  cardinality_4.py  list.py  list_2.py  macrotest_1.py  macrotest_1_314.py  macrotest_2.py  macrotest_2_314.py  macrotest_3.py  macrotest_3_314.py  macrotest_3_36.py  objectmap_1.py  objectmap_3.py
tests_standalone/test_jsg_readme/py/: ge1.py
